# m4.2_advanced_middleware_api

./: .bandit  .dockerignore  .env.integration.enc  .gitattributes  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  Dockerfile  GitVersion.major.yml  GitVersion.minor.yml  GitVersion.patch.yml  GitVersion.yml  LICENSE  README.md  config.yaml  docker-compose.yml  example_config.yaml  main.py  pyproject.toml  renovate.json
middleware/api/: README.md  __init__.py  api.py  business_logic.py  config.py  example_config.yaml  pyproject.toml
middleware/api/spec/admission-control/: design.md  spec.md  tasks.md
middleware/api/spec/arc-manager/: design.md  spec.md
middleware/api/spec/arc-store/: design.md  spec.md
middleware/api/spec/arc-upload/: spec.md
middleware/api/spec/document-store/: design.md  spec.md
middleware/api/spec/harvest-arc-upload/: design.md  spec.md  tasks.md
middleware/api/spec/harvest-manager/: design.md  spec.md
middleware/api/src/middleware/api/: api.py  business_logic.py  business_logic_factory.py  celery_app.py  celery_integration.py  cli.py  config.py  couchdb_client.py  fastapi_app.py  fastapi_tracing.py  gunicorn_config.py  health_service.py  main.py  main_gunicorn.py  migrations.py  rocrate.py  tracing.py  utils.py  worker.py  worker_health.py
middleware/api/src/middleware/api/api/: __init__.py  admission_control.py  fastapi_app.py  tracing.py
middleware/api/src/middleware/api/api/common/: __init__.py  dependencies.py
middleware/api/src/middleware/api/api/legacy/: __init__.py  task_status_store.py  task_types.py
middleware/api/src/middleware/api/api/v1/: __init__.py  arcs.py  tasks.py  (+1 more)
middleware/api/src/middleware/api/arc_store/: __init__.py  config.py  git_repo.py  gitlab_api.py  remote_git_provider.py  remote_repo_manager.py
middleware/api/src/middleware/api/business_logic/: __init__.py  arc_manager.py  business_logic.py  business_logic_factory.py  config.py  exceptions.py  harvest_manager.py  ports.py  task_dispatcher.py  task_payloads.py
middleware/api/src/middleware/api/common/: dependencies.py
middleware/api/src/middleware/api/document_store/: __init__.py  arc_document.py  config.py  content_hash.py  couchdb.py  couchdb_client.py  harvest_document.py  task_record.py
middleware/api/src/middleware/api/harvest/: __init__.py  config.py
middleware/api/src/middleware/api/schemas/: __init__.py  arc_document.py  enums.py  harvest_document.py  sync_task.py
middleware/api/src/middleware/api/services/: harvest_manager.py
middleware/api/src/middleware/api/v1/: arcs.py  system.py  tasks.py
middleware/api/src/middleware/api/v2/: arcs.py  system.py  tasks.py
middleware/api/src/middleware/api/v3/: arcs.py  harvests.py
middleware/api/src/middleware/api/worker/: __init__.py  celery_app.py  config.py  tasks.py  tracing.py  worker.py
middleware/api/tests/: conftest.py
middleware/api/tests/integration/: conftest.py  test_create_or_update_arcs.py  test_integration_create_or_update_arcs.py  test_integration_git_repo.py  test_system_git_repo.py  test_whoami.py
middleware/api/tests/system/: conftest.py  test_system_create_or_update_arcs.py  test_system_git_repo.py  test_system_v2_arcs.py  test_whoami.py
middleware/api/tests/system_external/: conftest.py  test_system_create_or_update_arcs.py
middleware/api/tests/system_local/: test_system_couchdb_persistence.py
middleware/api/tests/unit/: conftest.py  rocrate_fixtures.py  test_admission_control.py  test_arc_store.py  test_business_logic.py  test_business_logic_factory.py  test_cli.py  test_config.py  test_content_hash.py  test_couchdb_client.py  test_couchdb_store.py  test_create_or_update_arcs.py  test_git_repo.py  test_git_repo_health.py  test_gitlab_api_config.py  test_harvest_document.py  test_harvest_manager.py  test_legacy_task_status_store.py  test_lifespan_errors.py  test_middleware_api.py  test_persistence_gitlab_api.py  test_remote_repo_manager.py  test_rocrate_parse.py  test_system_v2_arcs.py  test_unit_business_logic_health.py  test_unit_create_or_update_arcs.py  test_utils.py  test_v2_arcs.py  test_v3_arcs.py  test_v3_harvests.py  test_v3_system.py  test_version.py  test_whoami.py  test_worker.py  test_worker_health.py
middleware/api_client/: README.md  example_client_config.yaml  pyproject.toml
middleware/api_client/spec/harvest-client/: design.md  spec.md
middleware/api_client/src/middleware/api_client/: __init__.py  api_client.py  config.py  main.py  models.py
middleware/api_client/tests/: client_test_support.py  conftest.py
middleware/api_client/tests/integration/: conftest.py  test_create_arcs.py
middleware/api_client/tests/unit/: conftest.py  test_api_client_config.py  test_client.py  test_client_config.py  test_config.py  test_harvest_arcs.py  test_retry_logic.py
middleware/shared/: README.md  config_base.py  pyproject.toml
middleware/shared/src/middleware/shared/: couchdb_client.py  tracing.py  utils.py
middleware/shared/src/middleware/shared/api_models/: __init__.py  models.py
middleware/shared/src/middleware/shared/config/: __init__.py  config_base.py  config_wrapper.py  logging.py
middleware/shared/src/middleware/shared/schemas/: __init__.py  arc_document.py  harvest_document.py
middleware/shared/tests/unit/: test_api_models.py  test_config_base.py  test_config_wrapper.py  test_logging.py  test_rocrate.py  test_tracing.py
middleware/sql_to_arc/: ARCHITECTURAL_DESIGN.md  README.md  config.example.yaml  pyproject.toml
middleware/sql_to_arc/src/middleware/sql_to_arc/: __init__.py  builder.py  config.py  database.py  main.py  mapper.py  models.py  processor.py  stats.py  tracing.py
middleware/sql_to_arc/src/sql_to_arc/: config.py  main.py
middleware/sql_to_arc/tests/integration/: test_workflow.py
middleware/sql_to_arc/tests/unit/: test_builder.py  test_bulk_fetch.py  test_coverage.py  test_database.py  test_main.py  test_mapper.py  test_populate.py  test_sql_to_arc_config.py  test_stats.py
middleware/tools/: README.md  arc2rocrate.py  pyproject.toml  repro_arctrl_rocrate_dates.py  rocrate2arc.py
(+182 files in other folders)
