[project]
name = "api"
version = "0.0.0" # currently we disrehgard the version of this subpackage
description = "The FAIRagro advanced middleware API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "arctrl>=3.0.0b15",
  "asn1crypto>=1.5.1",
  "cryptography>=45.0.6",
  "fastapi>=0.124.0",
  "gunicorn>=23.0.0",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "opentelemetry-instrumentation-requests>=0.47b0",
  "python-gitlab>=6.2.0",
  "pyyaml>=6.0.2",
  "shared",
  "uvicorn>=0.35.0",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
