[project]
name = "api"
dynamic = ["version"]
description = "The FAIRagro advanced middleware API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "shared",
  "aiocouch==4.0.1",
  "arctrl==3.0.5",
  "asn1crypto==1.5.1",
  "celery==5.6.3",
  "cryptography==46.0.7",
  "fastapi==0.136.0",
  "gitpython==3.1.47",
  "opentelemetry-instrumentation-celery==0.62b0",
  "opentelemetry-instrumentation-fastapi==0.62b0",
  "opentelemetry-instrumentation-requests==0.62b0",
  "python-gitlab==8.2.0",
  "pyyaml==6.0.3",
  "uvicorn==0.45.0",
  "celery-types==0.26.0",
  "aiocouch==4.0.1",
]

[project.scripts]
middleware-couchdb-setup = "middleware.api.cli:main"

[tool.uv.sources]
shared = { workspace = true }

[tool.ruff]
extend = "../../pyproject.toml"

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../..", fallback_version = "0.0.0", tag_regex = "^(?:v|.*-(?:chart|docker)-v)(?P<version>\\d+\\.\\d+\\.\\d+)(?:$|[-+].*)" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "types-pyyaml==6.0.12.20260408",
]
