[project]
name = "api_client"
dynamic = ["version"]
description = "The FAIRagro advanced middleware API client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.10.0",
    "respx>=0.20.0",
    "cryptography>=45.0.6",
    "types-pyyaml>=6.0.12.20240917",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
