[project]
name = "api_client"
dynamic = ["version"]
description = "The FAIRagro advanced middleware API client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.13.3",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "respx==0.23.1",
    "cryptography==46.0.7",
    "types-pyyaml==6.0.12.20260408",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../..", fallback_version = "0.0.0", tag_regex = "^(?:v|.*-(?:chart|docker)-v)(?P<version>\\d+\\.\\d+\\.\\d+)(?:$|[-+].*)" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
