[project]
name = "shared"
version = "0.0.0" # currently we disregard the version of this subpackage
description = "The FAIRagro advanced middleware shared components"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
