[project]
name = "shared"
dynamic = ["version"]
description = "The FAIRagro advanced middleware shared components"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../..", fallback_version = "0.0.0" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
