[project]
name = "sql_to_arc"
version = "0.0.0" # currently we disregard the version of this subpackage
description = "The FAIRagro advanced middleware SQL-to-ARC converter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arctrl>=3.0.0b12",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.12.4",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }
