[project]
name = "tools"
dynamic = ["version"]
description = "ARC conversion tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arctrl>=3.0.0b15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../.." }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
