[project]
name = "tools"
dynamic = ["version"]
description = "ARC conversion tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arctrl==3.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/middleware"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "../..", fallback_version = "0.0.0", tag_regex = "^(?:v|.*-(?:chart|docker)-v)(?P<version>\\d+\\.\\d+\\.\\d+)(?:$|[-+].*)" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
